tambah logo , nama dosen, nama kelompok

--- a/src/index.jade
+++ b/src/index.jade
@@ -16,6 +16,12 @@ html
     article
 
       section
+        <img src="img/logo mikroskil.JPG"height="100px"></img>
+        <h4 style="padding-top:30px"> Dosen Pembimbing : Hardy Huang
+        <h4 style="padding-top:20px">
+        h4 Nama Kelompok : +1 Ironwood Branch
+
+      section
         h1 VMOL <h4>(e-Video Mail OnLine)</h4>
       section
         h2 Apa itu VMOL?
