penambahan STMIK MIKROSKIL dan nama anggota, silahkan masing2 anggota menambahkan nim masing2

--- a/src/index.jade
+++ b/src/index.jade
@@ -17,9 +17,16 @@ html
 
       section
         <img src="img/logo mikroskil.JPG"height="100px"></img>
+        h2 STMIK MIKROSKIL
         <h4 style="padding-top:30px"> Dosen Pembimbing : Hardy Huang
         <h4 style="padding-top:20px">
         h4 Nama Kelompok : +1 Ironwood Branch
+      section
+        <h3 style="color:darkred"> Anggota Kelompok
+        h4 Michael
+        h4 Jansen
+        h4 Christian Yaputra (121111478)
+        h4 Kelvin Hermawan
 
       section
         h1 VMOL <h4>(e-Video Mail OnLine)</h4>
