--- a/src/index.jade
+++ b/src/index.jade
@@ -23,10 +23,10 @@ html
         h4 Nama Kelompok : +1 Ironwood Branch
       section
         <h3 style="color:darkred"> Anggota Kelompok
-        h4 Michael
-        h4 Jansen
+        h4 Michael (121110804)
+        h4 Jansen (121110791)
         h4 Christian Yaputra (121111478)
-        h4 Kelvin Hermawan
+        h4 Kelvin Hermawan (121110782)
 
       section
         h1 VMOL <h4>(e-Video Mail OnLine)</h4>
