--- a/src/index.jade
+++ b/src/index.jade
@@ -22,7 +22,7 @@ html
         <h4 style="padding-top:20px">
         h4 Nama Kelompok : +1 Ironwood Branch
       section
-        <h3 style="color:darkred"> Anggota Kelompok
+        <h3 style="color:darkred"> Anggota Kelompok :
         h4 Michael (121110804)
         h4 Jansen (121110791)
         h4 Christian Yaputra (121111478)
