--- a/src/index.jade
+++ b/src/index.jade
@@ -63,6 +63,14 @@ html
               li Paid User : Limit Durasi Video tidak ada, Limit Size Upload Video tidak ada, Format Video Bebas
               li Free User : Limit Durasi Video 5 menit, Limit Size Upload Video 25 MB, Format Video Bebas
           li 6. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll
+      
+      section
+        h2 Kelebihan VMOL
+        ul
+          li
+          li Efisien
+          li Harga Ekonomis
+          li Modern-Fashion Design Interface
 
       section
         h2 ANY QUESTION?
