Penambahan dua buah item ke bagian "kelebihan"

--- a/src/index.jade
+++ b/src/index.jade
@@ -71,6 +71,8 @@ html
           li Efisien
           li Harga Ekonomis
           li Modern-Fashion Design Interface
+          li Memperluas Jaringan Sosial
+          li Terobosan Baru Social Media
 
       section
         h2 ANY QUESTION?
