Penambahan slide efisiensi VMOL

--- a/src/index.jade
+++ b/src/index.jade
@@ -75,6 +75,13 @@ html
           li Terobosan Baru Social Media
 
       section
+        h3 Efisien
+        ul
+          li
+          li Tak Perlu Keahlian Khusus
+          li Mempermudah Koneksi Antar Pengguna
+
+      section
         h2 ANY QUESTION?
 
       section
