--- a/src/index.jade
+++ b/src/index.jade
@@ -51,8 +51,8 @@ html
           li
           li 1. Setiap User yang merupakan member VMOL akan terbagi menjadi 2 : <b>Paid User & Free User</b>
           ul
-            li Free User : format dan template design yang terbatas serta adanya limit dalam jumlah kartu yang dapat dikirim
-            li Paid User : format dan template design yang banyak serta tidak ada pembatasan jumlah kartu yang dapat dikirim
+            li Free User : format dan template design yang terbatas serta adanya pembatasan / limit terhadap jumlah kartu yang dapat dikirim (maksimal 50)
+            li Paid User : format dan template design yang banyak serta tidak ada pembatasan / unlimitted terhadap jumlah kartu yang dapat dikirim
           li 2. User akan diberikan pilihan untuk mau atau tidak menambahkan video ke dalam design mereka
 
       section
