background telah diubah...dan logo ad di edit sedikit

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -42,6 +42,14 @@ article.bespoke-parent {
     position: static;
   }
 }
+.bespoke-parent {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #d3d3d3));
+  background: -webkit-linear-gradient(top, #fff 0, #d3d3d3 100%);
+  background: -moz-linear-gradient(top, #fff 0, #d3d3d3 100%);
+  background: -o-linear-gradient(top, #fff 0, #d3d3d3 100%);
+  background: -ms-linear-gradient(top, #fff 0, #d3d3d3 100%);
+  background: linear-gradient(top, #fff 0, #d3d3d3 100%);
+}
 .bespoke-slide {
   -webkit-transition: -webkit-transform 0.6s ease, opacity 0.6s ease, background 0.6s ease;
   -moz-transition: -moz-transform 0.6s ease, opacity 0.6s ease, background 0.6s ease;
@@ -89,7 +97,12 @@ article.bespoke-parent {
   margin-top: -240px;
   left: 50%;
   margin-left: -320px;
-  background: slide_background;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #d3d3d3));
+  background: -webkit-linear-gradient(top, #fff 0, #d3d3d3 100%);
+  background: -moz-linear-gradient(top, #fff 0, #d3d3d3 100%);
+  background: -o-linear-gradient(top, #fff 0, #d3d3d3 100%);
+  background: -ms-linear-gradient(top, #fff 0, #d3d3d3 100%);
+  background: linear-gradient(top, #fff 0, #d3d3d3 100%);
   padding: 40px;
   -webkit-border-radius: 0;
   border-radius: 0;
