--- a/src/index.jade
+++ b/src/index.jade
@@ -12,11 +12,12 @@ html
     // endbuild
 
   body
+    
 
     article
 
       section
-        <img src="img/logo mikroskil.JPG"height="100px"></img>
+        <img src="img/logo mikroskil.png"height="100px"></img>
         h2 STMIK MIKROSKIL
         <h4 style="padding-top:30px"> Dosen Pembimbing : Hardy Huang
         <h4 style="padding-top:20px">
