--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -47,7 +47,9 @@ article
       overflow: visible
       position: static
     perspective: 600px
-
+.bespoke-parent
+  background: linear-gradient(white, lightgrey)
+  
 .bespoke-slide
   transition:
     transform slide_transition_length slide_transition_easing,
@@ -67,7 +69,7 @@ article
   margin-top: (slide_height / 2) * -1
   left: 50%
   margin-left: (slide_width / 2) * -1
-  background: slide_background
+  background: linear-gradient(white, lightgrey)
   padding: 40px
   border-radius: 0
   @media print
