--- a/src/index.jade
+++ b/src/index.jade
@@ -80,7 +80,8 @@ html
         h3 Efisien
         ul
           li
-          li Tak Perlu Keahlian Khusus
+          li Tidak Perlu Keahlian Khusus
+          (Disediakan e-book cara penggunaan e-VMOL baik untuk free user maupun paid user)
           li Mempermudah Koneksi Antar Pengguna
 
       section
