--- a/src/index.jade
+++ b/src/index.jade
@@ -80,16 +80,16 @@ html
         h3 Efisien
         ul
           li
-          li Tidak Perlu Keahlian Khusus
-          (Disediakan e-book cara penggunaan e-VMOL baik untuk free user maupun paid user)
-          li Mempermudah Koneksi Antar Pengguna
+          li Tidak perlu keahlian khusus
+          li Tersedia e-book cara penggunaan e-VMOL baik untuk free user maupun paid user
+          li Mempermudah koneksi antar pengguna
 
       section
         h2 Perbandingan VMOL dengan aplikasi lain
         ul
           li
-          li Menyediakan layanan yang memuaskan untuk free user
-          li Harga paid user yang tidak tinggi dibanding aplikasi lain
+          li Menyediakan layanan yang cukup memuaskan untuk free user
+          li Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly)
 
       section
         h2 ANY QUESTION?
