--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -16,11 +16,6 @@
   margin: 0;
 }
 article {
-  -webkit-transition: background 0.6s ease;
-  -moz-transition: background 0.6s ease;
-  -o-transition: background 0.6s ease;
-  -ms-transition: background 0.6s ease;
-  transition: background 0.6s ease;
   display: none;
 }
 article.bespoke-parent {
@@ -51,20 +46,16 @@ article.bespoke-parent {
   background: linear-gradient(top, #fff 0, #d3d3d3 100%);
 }
 .bespoke-slide {
-  -webkit-transition: -webkit-transform 0.6s ease, opacity 0.6s ease, background 0.6s ease;
-  -moz-transition: -moz-transform 0.6s ease, opacity 0.6s ease, background 0.6s ease;
-  -o-transition: -o-transform 0.6s ease, opacity 0.6s ease, background 0.6s ease;
-  -ms-transition: -ms-transform 0.6s ease, opacity 0.6s ease, background 0.6s ease;
-  transition: transform 0.6s ease, opacity 0.6s ease, background 0.6s ease;
-  -webkit-transform-origin: 50% 50% 0;
-  -moz-transform-origin: 50% 50% 0;
-  -o-transform-origin: 50% 50% 0;
-  -ms-transform-origin: 50% 50% 0;
-  transform-origin: 50% 50% 0;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
+  -webkit-transition: all 0.6s ease;
+  -moz-transition: all 0.6s ease;
+  -o-transition: all 0.6s ease;
+  -ms-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  -webkit-transform-origin: 50% 50% -300px;
+  -moz-transform-origin: 50% 50% -300px;
+  -o-transform-origin: 50% 50% -300px;
+  -ms-transform-origin: 50% 50% -300px;
+  transform-origin: 50% 50% -300px;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-box;
@@ -97,12 +88,6 @@ article.bespoke-parent {
   margin-top: -240px;
   left: 50%;
   margin-left: -320px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #d3d3d3));
-  background: -webkit-linear-gradient(top, #fff 0, #d3d3d3 100%);
-  background: -moz-linear-gradient(top, #fff 0, #d3d3d3 100%);
-  background: -o-linear-gradient(top, #fff 0, #d3d3d3 100%);
-  background: -ms-linear-gradient(top, #fff 0, #d3d3d3 100%);
-  background: linear-gradient(top, #fff 0, #d3d3d3 100%);
   padding: 40px;
   -webkit-border-radius: 0;
   border-radius: 0;
@@ -118,18 +103,18 @@ article.bespoke-parent {
   }
 }
 .bespoke-before {
-  -webkit-transform: translateX(500px) translateX(-320px) rotateY(-90deg) translateX(-320px);
-  -moz-transform: translateX(500px) translateX(-320px) rotateY(-90deg) translateX(-320px);
-  -o-transform: translateX(500px) translateX(-320px) rotateY(-90deg) translateX(-320px);
-  -ms-transform: translateX(500px) translateX(-320px) rotateY(-90deg) translateX(-320px);
-  transform: translateX(500px) translateX(-320px) rotateY(-90deg) translateX(-320px);
+  -webkit-transform: rotateY(50deg) rotateX(-30deg);
+  -moz-transform: rotateY(50deg) rotateX(-30deg);
+  -o-transform: rotateY(50deg) rotateX(-30deg);
+  -ms-transform: rotateY(50deg) rotateX(-30deg);
+  transform: rotateY(50deg) rotateX(-30deg);
 }
 .bespoke-after {
-  -webkit-transform: translateX(-500px) translateX(320px) rotateY(90deg) translateX(320px);
-  -moz-transform: translateX(-500px) translateX(320px) rotateY(90deg) translateX(320px);
-  -o-transform: translateX(-500px) translateX(320px) rotateY(90deg) translateX(320px);
-  -ms-transform: translateX(-500px) translateX(320px) rotateY(90deg) translateX(320px);
-  transform: translateX(-500px) translateX(320px) rotateY(90deg) translateX(320px);
+  -webkit-transform: rotateY(-120deg) rotateX(50deg);
+  -moz-transform: rotateY(-120deg) rotateX(50deg);
+  -o-transform: rotateY(-120deg) rotateX(50deg);
+  -ms-transform: rotateY(-120deg) rotateX(50deg);
+  transform: rotateY(-120deg) rotateX(50deg);
 }
 @media print {
   .bespoke-after {
