penambahan slide mengapa terobosan terbaru

--- a/src/index.jade
+++ b/src/index.jade
@@ -30,7 +30,8 @@ html
         h4 Kelvin Hermawan (121110782)
 
       section
-        h1 VMOL <h4>(e-Video Mail OnLine)</h4>
+        h1 VMOL 
+        <h4>(e-Video Mail OnLine)</h4>
       section
         h2 Apa itu VMOL?
         ul
@@ -77,13 +78,20 @@ html
           li Terobosan Baru Social Media
 
       section
-        h3 Efisien
+        h2 Mengapa Efisien?
         ul
           li
           li Tidak perlu keahlian khusus
           li Tersedia e-book cara penggunaan e-VMOL baik untuk free user maupun paid user
           li Mempermudah koneksi antar pengguna
 
+      sectioin
+        h2 Mengapa disebut Terobosan Baru Social Media?
+        ul
+          li
+          li Interaksi di social media yang umum masih menggunakan media text ataupun foto.
+          li Penggunaan video sebagai media interaksi masih jarang digunakan.
+          li Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan.
       section
         h2 Perbandingan VMOL dengan aplikasi lain
         ul
