perubahan sedikit, ada yang salah ketik

--- a/src/index.jade
+++ b/src/index.jade
@@ -85,7 +85,7 @@ html
           li Tersedia e-book cara penggunaan e-VMOL baik untuk free user maupun paid user
           li Mempermudah koneksi antar pengguna
 
-      sectioin
+      section
         h2 Mengapa disebut Terobosan Baru Social Media?
         ul
           li
