--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -50,8 +50,8 @@ article
   background: linear-gradient(white, lightgrey)
   
 .bespoke-slide
-  transition: all .6s ease
-  transform-origin: 50% 50% -300px
+  transition: all .8s ease
+  transform-origin: -50% 150%
   display: flex
   flex-direction: column
   justify-content: center
@@ -75,7 +75,7 @@ article
     margin: 0
 
 .bespoke-before
-  transform: translateX(slide_transition_nudge_x * -1) rotateY(slide_transition_rotate_y * -1) translateX(slide_width / -2)
+  transform: translateX(slide_transition_nudge_x * -1) rotateY(-85deg) rotateX(-50deg)
 
 .bespoke-after
   transform: translateX(slide_transition_nudge_x) rotateY(-120deg) rotateX(50deg)
