Tambah fitur baru untuk paid user VMOL

--- a/src/index.jade
+++ b/src/index.jade
@@ -66,6 +66,7 @@ html
               li Paid User : Limit Durasi Video tidak ada, Limit Size Upload Video tidak ada, Format Video Bebas
               li Free User : Limit Durasi Video 5 menit, Limit Size Upload Video 25 MB, Format Video Bebas
           li 4. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll
+          li 5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke VMOL
       
       section
         h2 Kelebihan VMOL
