Edit Logbook and Add Slide "Harga Ekonomis"

--- a/src/index.jade
+++ b/src/index.jade
@@ -85,7 +85,16 @@ html
           li Tidak perlu keahlian khusus
           li Tersedia e-book cara penggunaan e-VMOL baik untuk free user maupun paid user
           li Mempermudah koneksi antar pengguna
-
+      section
+        h2 Mengapa disebut Harga Ekonomis?
+        ul
+          li
+          li Harga < 500 ribu (per bulan).
+          li Terdapat discount bagi User yang sudah lama menggunakan VMOL.
+          li Discount juga berlaku pada User yang merekomendasikan VMOL ke User lain.
+          li Adapun juga discount bagi User yang ingin membayar langsung 1 tahun.
+          li Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.
+      
       section
         h2 Mengapa disebut Terobosan Baru Social Media?
         ul
@@ -93,6 +102,7 @@ html
           li Interaksi di social media yang umum masih menggunakan media text ataupun foto.
           li Penggunaan video sebagai media interaksi masih jarang digunakan.
           li Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan.
+
       section
         h2 Perbandingan VMOL dengan aplikasi lain
         ul
