edit detail kelebihan efisien, harga ekonomis, terobosan baru social media serta perbedaannya dgn aplikasi lain

--- a/src/index.jade
+++ b/src/index.jade
@@ -82,32 +82,32 @@ html
         h2 Mengapa Efisien?
         ul
           li
-          li Tidak perlu keahlian khusus
-          li Tersedia e-book cara penggunaan e-VMOL baik untuk free user maupun paid user
+          li Tidak perlu keahlian khusus dalam mengoperasikannya
+          li Tersedia e-book cara penggunaan VMOL baik untuk free user maupun paid user
           li Mempermudah koneksi antar pengguna
       section
         h2 Mengapa disebut Harga Ekonomis?
         ul
           li
-          li Harga < 500 ribu (per bulan).
-          li Terdapat discount bagi User yang sudah lama menggunakan VMOL.
-          li Discount juga berlaku pada User yang merekomendasikan VMOL ke User lain.
-          li Adapun juga discount bagi User yang ingin membayar langsung 1 tahun.
+          li Harga yang cukup terjangkau dimana < 500 ribu (per bulan)
+          li Discount bagi user lama (dalam hal perpanjangan account)
+          li Discount bagi user yang merekomendasikan VMOL kepada teman
+          li Discount bagi user yang langsung memperpanjang account selama 1 tahun
           li Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.
       
       section
         h2 Mengapa disebut Terobosan Baru Social Media?
         ul
           li
-          li Interaksi di social media yang umum masih menggunakan media text ataupun foto.
-          li Penggunaan video sebagai media interaksi masih jarang digunakan.
-          li Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan.
+          li Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang)
+          li Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan
 
       section
         h2 Perbandingan VMOL dengan aplikasi lain
         ul
           li
-          li Menyediakan layanan yang cukup memuaskan untuk free user
+          li New user dapat langsung memakainya (menjadi free user) dimana pada aplikasi lain, new user hanya dapat memakainya pada masa trial (terbatas)
+          li Menyediakan layanan yang sangat memuaskan bahkan untuk free user sekalipun
           li Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly)
 
       section
