--- a/src/index.jade
+++ b/src/index.jade
@@ -33,14 +33,14 @@ html
         h1 VMOL 
         <h4>(e-Video Mail OnLine)</h4>
       section
-        h2 Apa itu VMOL?
+        <h2 style="color:darkred"> Apa itu VMOL?</h2>
         ul
           li 
           li Sebuah Aplikasi pengiriman Surat/Kartu/Undangan/Advertising disertai Video berbasis Online/Mobile
           li Sebuah Generasi tren masa kini dalam pembuatan surat/kartu/undangan/Advertising
 
       section
-        h2 Sejarah VMOL
+        <h2 style="color:darkred"> Sejarah VMOL</h2>
         ul
           li
           li Dibangun oleh 2 orang : Michael(Founder) dan Septian Rahman(Co-Founder)
@@ -48,7 +48,7 @@ html
           li Awalnya, direncanakan akan membuat Forum dengan Engine Chatting Online
 
       section
-        h2 Mengenal VMOL
+        <h2 style="color:darkred"> Mengenal VMOL</h2>
         ul
           li
           li 1. Setiap User yang merupakan member VMOL akan terbagi menjadi 2 : <b>Paid User & Free User</b>
@@ -58,7 +58,7 @@ html
           li 2. User akan diberikan pilihan untuk mau atau tidak menambahkan video ke dalam design mereka
 
       section
-        h2 Lanjutan...
+        <h2 style="color:darkred"> Lanjutan...</h2>
         ul
           li
           li 3. Untuk video juga terdapat pembagian pada tiap user:
@@ -69,7 +69,7 @@ html
           li 5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke VMOL
       
       section
-        h2 Kelebihan VMOL
+        <h2 style="color:darkred"> Kelebihan VMOL</h2>
         ul
           li
           li Efisien
@@ -79,14 +79,14 @@ html
           li Terobosan Baru Social Media
 
       section
-        h2 Mengapa Efisien?
+        <h2 style="color:darkred"> Mengapa Efisien?</h2>
         ul
           li
           li Tidak perlu keahlian khusus dalam mengoperasikannya
           li Tersedia e-book cara penggunaan VMOL baik untuk free user maupun paid user
           li Mempermudah koneksi antar pengguna
       section
-        h2 Mengapa disebut Harga Ekonomis?
+        <h2 style="color:darkred"> Mengapa disebut Harga Ekonomis?</h2>
         ul
           li
           li Harga yang cukup terjangkau dimana < 500 ribu (per bulan)
@@ -96,14 +96,21 @@ html
           li Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.
       
       section
-        h2 Mengapa disebut Terobosan Baru Social Media?
+        <h2 style="color:darkred"> Mengapa dapat Memperluas Jaringan Sosial?</h2>
+        ul
+          li
+          li Melalui video, orang akan lebih mudah untuk mengenal orang lain dibandingkan dengan hanya menaruh gambar atau profile picture.
+          li Melalui video juga, orang akan mengetahui hobi orang lain sehingga akan memunculkan komunitas orang-orang yang memiliki hobi yang sama.
+
+      section
+        <h2 style="color:darkred"> Mengapa disebut Terobosan Baru Social Media?</h2>
         ul
           li
           li Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang)
           li Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan
 
       section
-        h2 Perbandingan VMOL dengan aplikasi lain
+        <h2 style="color:darkred"> Perbandingan VMOL dengan Aplikasi Lain</h2>
         ul
           li
           li New user dapat langsung memakainya (menjadi free user) dimana pada aplikasi lain, new user hanya dapat memakainya pada masa trial (terbatas)
@@ -111,7 +118,7 @@ html
           li Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly)
 
       section
-        h2 ANY QUESTION?
+        <h2 style="color:darkred"> ANY QUESTION?
 
       section
         h1 THANK YOU!!
