--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -135,7 +135,7 @@ article
   transition: width .6s ease
   position: absolute
   height: 100%
-  background: #0089f3
+  background: linear-gradient(right,lightblue,blue)
   border-radius: 0 4px 4px 0
 
 // bespoke-state styles
