Tambah slide Modern-Fashion Design Interface

--- a/src/index.jade
+++ b/src/index.jade
@@ -94,6 +94,13 @@ html
           li Discount bagi user yang merekomendasikan VMOL kepada teman
           li Discount bagi user yang langsung memperpanjang account selama 1 tahun
           li Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.
+
+      section
+        <h2 style="color:darkred">Mengapa disebut Modern-Fashion Design Interface?</h2>
+        ul
+          li
+          li Tampilan antarmuka pengguna yang futuristik
+          li User akan merasakan sensasi Social Media yang benar-benar beda daripada biasanya
       
       section
         <h2 style="color:darkred"> Mengapa dapat Memperluas Jaringan Sosial?</h2>
