--- a/src/index.jade
+++ b/src/index.jade
@@ -99,8 +99,9 @@ html
         <h2 style="color:darkred"> Mengapa dapat Memperluas Jaringan Sosial?</h2>
         ul
           li
-          li Melalui video, orang akan lebih mudah untuk mengenal orang lain dibandingkan dengan hanya menaruh gambar atau profile picture.
-          li Melalui video juga, orang akan mengetahui hobi orang lain sehingga akan memunculkan komunitas orang-orang yang memiliki hobi yang sama.
+          li Melalui video, orang akan lebih mudah mengenali orang lain dibandingkan dengan melihat gambar atau profile picture
+          li Melalui video juga, dapat mengetahui orang yang memiliki hobi yang sama sehingga dapat tercipta suatu komunitas / kumpulan orang-orang yang memiliki hobi yang sama
+          li Adanya fasilitas chatting online sehingga user dapat lebih mengenal satu sama lain
 
       section
         <h2 style="color:darkred"> Mengapa disebut Terobosan Baru Social Media?</h2>
@@ -116,6 +117,7 @@ html
           li New user dapat langsung memakainya (menjadi free user) dimana pada aplikasi lain, new user hanya dapat memakainya pada masa trial (terbatas)
           li Menyediakan layanan yang sangat memuaskan bahkan untuk free user sekalipun
           li Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly)
+          li Customer service 24 jam yang siap melayani pertanyaan, keluhan maupun saran dari user
 
       section
         <h2 style="color:darkred"> ANY QUESTION?
