--- a/src/index.jade
+++ b/src/index.jade
@@ -96,6 +96,14 @@ html
           li Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.
       
       section
+        <h2 style="color:darkred"> Mengapa memiliki Modern-Fashion Design Interface?</h2>
+        ul
+          li
+          li VMOL memiliki design interface yang modern namun simple tapi tidak membuat para user merasa jenuh.
+          li Free User dapat mengubah warna tampilan interface sesuai dengan warna yang disediakan VMOL.
+          li Paid User dapat mengubah warna tampilan interface dengan jenis warna yang lebih bervariasi atau pun user ingin mengupload gambar sendiri untuk dijadikan background interface.
+
+      section
         <h2 style="color:darkred"> Mengapa dapat Memperluas Jaringan Sosial?</h2>
         ul
           li
