Edit logbook and Add Slide Target Bisnis VMOL

--- a/src/index.jade
+++ b/src/index.jade
@@ -69,6 +69,16 @@ html
           li 5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke VMOL
       
       section
+        <h2 style="color:darkred"> Target Bisnis VMOL</h2>
+        ul
+          li
+          li MLM(MultiLine Marketing)
+          li Advertising
+          li OlShop(Online Shopping)
+          li Saham
+          li Design Interface
+
+      section
         <h2 style="color:darkred"> Kelebihan VMOL</h2>
         ul
           li
