--- a/src/index.jade
+++ b/src/index.jade
@@ -77,6 +77,7 @@ html
           li OlShop(Online Shopping)
           li Saham
           li Design Interface
+          li Kartu undangan (ulang tahun, pernikahan, dll)
 
       section
         <h2 style="color:darkred"> Kelebihan VMOL</h2>
@@ -133,6 +134,7 @@ html
         <h2 style="color:darkred"> Mengapa disebut Terobosan Baru Social Media?</h2>
         ul
           li
+          li Merupakan terobosan baru (pertama kali di dunia) dalam pembuatan surat/kartu/undangan/Advertising
           li Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang)
           li Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan
 
