pengeditan ketikan teks dan update logbook

--- a/src/index.jade
+++ b/src/index.jade
@@ -18,8 +18,8 @@ html
 
       section
         <img src="img/logo mikroskil.png"height="100px"></img>
-        h2 STMIK MIKROSKIL
-        <h4 style="padding-top:30px"> Dosen Pembimbing : Hardy Huang
+        <h2 style="color:black">STMIK MIKROSKIL</h2>
+        <h4 style="padding-top:10px"> Dosen Pembimbing : Hardy Huang
         <h4 style="padding-top:20px">
         h4 Nama Kelompok : +1 Ironwood Branch
       section
@@ -30,32 +30,32 @@ html
         h4 Kelvin Hermawan (121110782)
 
       section
-        h1 VMOL 
-        <h4>(e-Video Mail OnLine)</h4>
+        <h1 style="color:black"> VMOL </h1>
+        <h3>(e-Video Mail OnLine)</h3>
       section
         <h2 style="color:darkred"> Apa itu VMOL?</h2>
         ul
           li 
           li Sebuah Aplikasi pengiriman Surat/Kartu/Undangan/Advertising disertai Video berbasis Online/Mobile
-          li Sebuah Generasi tren masa kini dalam pembuatan surat/kartu/undangan/Advertising
+          li Sebuah Tren Generasi masa kini dalam pembuatan Surat/Kartu/Undangan/Advertising
 
       section
         <h2 style="color:darkred"> Sejarah VMOL</h2>
         ul
           li
-          li Dibangun oleh 2 orang : Michael(Founder) dan Septian Rahman(Co-Founder)
-          li Ditemukan saat sedang berdiskusi mengenai project kolaborasi
-          li Awalnya, direncanakan akan membuat Forum dengan Engine Chatting Online
+          li Dibangun oleh 2 orang : <b>Michael</b> (Founder) dan <b>Septian Rahman</b> (Co-Founder)
+          li Ditemukan saat sedang berdiskusi mengenai project kolaborasi.
+          li Awalnya, direncanakan akan membuat Forum dengan Engine Chatting Online.
 
       section
         <h2 style="color:darkred"> Mengenal VMOL</h2>
         ul
           li
-          li 1. Setiap User yang merupakan member VMOL akan terbagi menjadi 2 : <b>Paid User & Free User</b>
+          li 1. Setiap User yang merupakan member <b>VMOL</b> akan terbagi menjadi 2 : <b>Paid User & Free User</b>
           ul
-            li Free User : format dan template design yang terbatas serta adanya pembatasan / limit terhadap jumlah kartu yang dapat dikirim (maksimal 50)
-            li Paid User : format dan template design yang banyak serta tidak ada pembatasan / unlimitted terhadap jumlah kartu yang dapat dikirim
-          li 2. User akan diberikan pilihan untuk mau atau tidak menambahkan video ke dalam design mereka
+            li <b>Free User</b> : Format dan template design yang terbatas serta adanya pembatasan / limit terhadap jumlah kartu yang dapat dikirim (maksimal 50).
+            li <b>Paid User</b> : Format dan template design yang banyak serta tidak ada pembatasan / unlimitted terhadap jumlah kartu yang dapat dikirim.
+          li 2. User akan diberikan pilihan apakah User mau atau tidak menambahkan video ke dalam design mereka.
 
       section
         <h2 style="color:darkred"> Lanjutan...</h2>
@@ -63,10 +63,10 @@ html
           li
           li 3. Untuk video juga terdapat pembagian pada tiap user:
             ul
-              li Paid User : Limit Durasi Video tidak ada, Limit Size Upload Video tidak ada, Format Video Bebas
-              li Free User : Limit Durasi Video 5 menit, Limit Size Upload Video 25 MB, Format Video Bebas
-          li 4. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll
-          li 5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke VMOL
+              li <b>Paid User</b> : Limit Durasi Video tidak ada, Limit Size Upload Video tidak ada, Format Video Bebas.
+              li <b>Free User</b> : Limit Durasi Video 5 menit, Limit Size Upload Video 25 MB, Format Video Bebas.
+          li 4. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll.
+          li 5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke <b>VMOL</b>.
       
       section
         <h2 style="color:darkred"> Target Bisnis VMOL</h2>
@@ -77,7 +77,7 @@ html
           li OlShop(Online Shopping)
           li Saham
           li Design Interface
-          li Kartu undangan (ulang tahun, pernikahan, dll)
+          li Kartu Undangan (Ulang Tahun, Pernikahan, dll)
 
       section
         <h2 style="color:darkred"> Kelebihan VMOL</h2>
@@ -93,59 +93,59 @@ html
         <h2 style="color:darkred"> Mengapa Efisien?</h2>
         ul
           li
-          li Tidak perlu keahlian khusus dalam mengoperasikannya
-          li Tersedia e-book cara penggunaan VMOL baik untuk free user maupun paid user
-          li Mempermudah koneksi antar pengguna
+          li Tidak perlu keahlian khusus dalam mengoperasikannya.
+          li Tersedia e-book cara penggunaan <b>VMOL</b> baik untuk free user maupun paid user.
+          li Mempermudah koneksi antar pengguna.
       section
         <h2 style="color:darkred"> Mengapa disebut Harga Ekonomis?</h2>
         ul
           li
-          li Harga yang cukup terjangkau dimana < 500 ribu (per bulan)
-          li Discount bagi user lama (dalam hal perpanjangan account)
-          li Discount bagi user yang merekomendasikan VMOL kepada teman
-          li Discount bagi user yang langsung memperpanjang account selama 1 tahun
-          li Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.
+          li Harga yang cukup terjangkau dimana < IDR 500 ribu (per bulan).
+          li Discount bagi user lama (dalam hal perpanjangan account).
+          li Discount bagi user yang merekomendasikan <b>VMOL</b> kepada teman.
+          li Discount bagi user yang langsung memperpanjang account selama 1 tahun.
+          li Pembayaran bisa menggunakan <b>PayPal, BitCoin, Visa, MasterCard</b>.
 
       section
         <h2 style="color:darkred">Mengapa disebut Modern-Fashion Design Interface?</h2>
         ul
           li
-          li Tampilan antarmuka pengguna yang futuristik
-          li User akan merasakan sensasi Social Media yang benar-benar beda daripada biasanya
+          li Tampilan antarmuka pengguna yang futuristik.
+          li User akan merasakan sensasi Social Media yang benar-benar beda daripada biasanya.
       
       section
         <h2 style="color:darkred"> Mengapa memiliki Modern-Fashion Design Interface?</h2>
         ul
           li
-          li VMOL memiliki design interface yang modern namun simple sehingga tidak membuat para user merasa jenuh.
-          li Free User dapat mengubah warna tampilan interface sesuai dengan warna yang disediakan VMOL.
-          li Paid User dapat mengubah warna tampilan interface dengan jenis warna yang lebih bervariasi atau pun user ingin mengupload gambar sendiri untuk dijadikan background interface.
-          li Tersedia berbagai tema yang menarik untuk user interface, baik gratis maupun berbayar
+          li <b>VMOL</b> memiliki design interface yang modern namun simple sehingga tidak membuat para user merasa jenuh.
+          li <b>Free User</b> dapat mengubah warna tampilan interface sesuai dengan warna yang disediakan <b>VMOL</b>.
+          li <b>Paid User</b> dapat mengubah warna tampilan interface dengan jenis warna yang lebih bervariasi atau pun user ingin mengupload gambar sendiri untuk dijadikan background interface.
+          li Tersedia berbagai tema yang menarik untuk user interface, baik gratis maupun berbayar.
 
       section
         <h2 style="color:darkred"> Mengapa dapat Memperluas Jaringan Sosial?</h2>
         ul
           li
-          li Melalui video, orang akan lebih mudah mengenali orang lain dibandingkan dengan melihat gambar atau profile picture
-          li Melalui video juga, dapat mengetahui orang yang memiliki hobi yang sama sehingga dapat tercipta suatu komunitas / kumpulan orang-orang yang memiliki hobi yang sama
-          li Adanya fasilitas chatting online sehingga user dapat lebih mengenal satu sama lain
+          li Melalui video, orang akan lebih mudah mengenali orang lain dibandingkan dengan melihat gambar atau profile picture.
+          li Melalui video juga, dapat mengetahui orang yang memiliki hobi yang sama sehingga dapat tercipta suatu komunitas/kumpulan orang-orang yang memiliki hobi yang sama.
+          li Adanya fasilitas chatting online sehingga user dapat lebih mengenal satu sama lain.
 
       section
         <h2 style="color:darkred"> Mengapa disebut Terobosan Baru Social Media?</h2>
         ul
           li
-          li Merupakan terobosan baru (pertama kali di dunia) dalam pembuatan surat/kartu/undangan/Advertising
-          li Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang)
-          li Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan
+          li Merupakan terobosan baru (pertama kali di dunia) dalam pembuatan Surat/Kartu/Undangan/Advertising.
+          li Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang).
+          li Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan.
 
       section
         <h2 style="color:darkred"> Perbandingan VMOL dengan Aplikasi Lain</h2>
         ul
           li
-          li New user dapat langsung memakainya (menjadi free user) dimana pada aplikasi lain, new user hanya dapat memakainya pada masa trial (terbatas)
-          li Menyediakan layanan yang sangat memuaskan bahkan untuk free user sekalipun
-          li Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly)
-          li Customer service 24 jam yang siap melayani pertanyaan, keluhan maupun saran dari user
+          li New user dapat langsung memakainya (menjadi free user) dimana pada aplikasi lain, new user hanya dapat memakainya pada masa trial (terbatas).
+          li Menyediakan layanan yang sangat memuaskan bahkan untuk free user sekalipun.
+          li Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly).
+          li Customer service 24 jam yang siap melayani pertanyaan, keluhan maupun saran dari user.
 
       section
         <h2 style="color:darkred"> ANY QUESTION?
