Tambah kelebihan VMOL beserta penjelasannya

--- a/src/index.jade
+++ b/src/index.jade
@@ -88,6 +88,7 @@ html
           li Modern-Fashion Design Interface
           li Memperluas Jaringan Sosial
           li Terobosan Baru Social Media
+          li Teknologi Streaming Video yang Memukau
 
       section
         <h2 style="color:darkred"> Mengapa Efisien?</h2>
@@ -137,6 +138,13 @@ html
           li Merupakan terobosan baru (pertama kali di dunia) dalam pembuatan Surat/Kartu/Undangan/Advertising.
           li Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang).
           li Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan.
+
+      section
+        <h2 style="color:darkred">Mengapa Teknologi Streaming Video di VMOL Disebut Memukau?</h2>
+        ul
+          li
+          li Pencegahan Buffering dengan Teknologi <i>Anti-Buffering</i> sehingga memberi kenyamanan bagi user
+          li Paid User dapat meningkatkan kualitas video yang akan dilihatnya sehingga tampilan video lebih realistik
 
       section
         <h2 style="color:darkred"> Perbandingan VMOL dengan Aplikasi Lain</h2>
