Edit Logbook and Edit Slide

--- a/src/index.jade
+++ b/src/index.jade
@@ -69,14 +69,23 @@ html
           li 5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke <b>VMOL</b>.
       
       section
-        <h2 style="color:darkred"> Target Bisnis VMOL</h2>
+        <h2>Apakah ada Bisnis/Peluang Kerja yang bisa didapatkan dari VMOL?</h2>
+        ul
+          li
+          li A. Ya
+          li B. Tidak
+          li C. Bisa Jadi
+          li D. Galau
+          li E. Tidak ada Jawaban
+      section
+        <h2 style="color:darkred"> Bisnis/Peluang Kerja VMOL</h2>
         ul
           li
           li MLM(MultiLine Marketing)
           li Advertising
           li OlShop(Online Shopping)
           li Saham
-          li Design Interface
+          li Designer
           li Kartu Undangan (Ulang Tahun, Pernikahan, dll)
 
       section
@@ -159,8 +168,17 @@ html
         <h2 style="color:darkred"> ANY QUESTION?
 
       section
-        h1 THANK YOU!!
-
+        h3 THANK YOU!! 
+        h3 KAMSIA!! 
+        h3 TERIMA KASIH!!
+        h3 MATUR NUWUN!!
+        h3 TARIMO KASI!!
+        h3 MULIATE!!
+        h3 MERCI!!
+        h3 GRACIAS!!
+        h3 XIE XIE!!
+        h3 ARIGATO!!
+        h3 OBRIGADO!!
     // build:js scripts/scripts.js
     script(src='bower_components/bespoke.js/dist/bespoke.min.js')
     script(src='bower_components/bespoke-keys/dist/bespoke-keys.min.js')
