--- a/src/index.jade
+++ b/src/index.jade
@@ -69,7 +69,7 @@ html
           li 5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke <b>VMOL</b>.
       
       section
-        <h2>Apakah ada Bisnis/Peluang Kerja yang bisa didapatkan dari VMOL?</h2>
+        <h2 style="color:darkred">Apakah ada Bisnis/Peluang Kerja yang bisa didapatkan dari VMOL?</h2>
         ul
           li
           li A. Ya
@@ -152,8 +152,10 @@ html
         <h2 style="color:darkred">Mengapa Teknologi Streaming Video di VMOL Disebut Memukau?</h2>
         ul
           li
-          li Pencegahan Buffering dengan Teknologi <i>Anti-Buffering</i> sehingga memberi kenyamanan bagi user
-          li Paid User dapat meningkatkan kualitas video yang akan dilihatnya sehingga tampilan video lebih realistik
+          li Pencegahan Buffering dengan Teknologi <i>Anti-Buffering</i> sehingga memberi kenyamanan bagi user.
+          li User dapat mendownload video dengan cepat.
+          li <b>Paid User</b> dapat meningkatkan kualitas video yang akan dilihatnya sehingga tampilan video lebih realistik.
+
 
       section
         <h2 style="color:darkred"> Perbandingan VMOL dengan Aplikasi Lain</h2>
@@ -172,12 +174,13 @@ html
         h3 KAMSIA!! 
         h3 TERIMA KASIH!!
         h3 MATUR NUWUN!!
-        h3 TARIMO KASI!!
+        h3 DANKE!!
         h3 MULIATE!!
         h3 MERCI!!
         h3 GRACIAS!!
-        h3 XIE XIE!!
-        h3 ARIGATO!!
+        h3 谢谢!!
+        h3 ありがとう!!
+        h3 감사합니다!!
         h3 OBRIGADO!!
     // build:js scripts/scripts.js
     script(src='bower_components/bespoke.js/dist/bespoke.min.js')
