tambahan kata "bengong" sama edit teknologi video memukau

--- a/src/index.jade
+++ b/src/index.jade
@@ -76,7 +76,8 @@ html
           li B. Tidak
           li C. Bisa Jadi
           li D. Galau
-          li E. Tidak ada Jawaban
+          li E. Bengong
+          li F. Tidak ada Jawaban
       section
         <h2 style="color:darkred"> Bisnis/Peluang Kerja VMOL</h2>
         ul
@@ -153,7 +154,8 @@ html
         ul
           li
           li Pencegahan Buffering dengan Teknologi <i>Anti-Buffering</i> sehingga memberi kenyamanan bagi user.
-          li User dapat mendownload video dengan cepat.
+          li <b>Paid User</b> dapat mengupload / mendownload video dengan cepat.
+          li <b>Paid User</b> dapat sambil menonton video yang sedang didownload
           li <b>Paid User</b> dapat meningkatkan kualitas video yang akan dilihatnya sehingga tampilan video lebih realistik.
 
 
